--- a/project1/index.html
+++ b/project1/index.html
@@ -5,8 +5,9 @@
     </head>
 <body>
     <div class="container">
+        <div class="bgcolor">
         <div class="navbar">
-            <img src="./img/logo.svg" width="300" height="300" >
+            <img src="./img/logo.svg" >
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
@@ -17,5 +18,64 @@
                 </ul>
             </nav>
         </div>
+        <div class="content">
+            <h1>Android<br>
+                Compose<br>
+                Camp Fest</h1>
+            <p>Hello there, coders! <br>
+                Plan out your plans for developing Android apps📱 and learn the fundamentals<br>
+                of Android app development! GDSC - Progressive Education Society's Modern<br>
+                College Of Engineering, Pune chapter is here with an amazing Android<br>
+                 Compose Camp, which is organised by the community to enrich our code<br>
+                 monkeys' coding experience! So, what are you still waiting for?</p>
+                 <a href="" class="btn-1">Register Now</a>
+        </div>
+        <img src="./img/home-hero.svg" class="feature-img">
+    </div>
+       <div class="line">
+        <h1>What is Android Compose Camp?</h1>
+        <hr>
+        <p>
+            Jetpack Compose is a modern toolkit for Android that simplifies UI progress. It is currently in
+             use by countless apps <br>around the world, including Twitter, Airbnb, and Google Play; even 
+             if you're not, now is a great time to get started<br>We're introducing Compose Camp, a series 
+             of in-person and virtual sessions where you can discover how to build<br>
+              Android apps with Jetpack Compose along with your friends, to make the learning process 
+              of Compose even easier. <br>Scoop up your "camping gear" and check out how you can take part
+             in this event ASAP!
+        
+        </p>
+       </div>
+       <img src="./img/android-jetpack.png" class="icon">
+       <a href="" class="btn-2">Register For Event</a>
+
+
+       <div class="main">
+        <h3>Join GDSC PES MCOE 2022</h3>
+        <h4>Hello there, coders! </h4>
+        <p>Plan out your plans for developing Android apps📱 and learn the<br>
+             fundamentals of Android app development! GDSC is here with an<br>
+              amazing Android Compose Camp, which is organised by the <br>
+              community to enrich our code monkeys' coding experience! So, what<br>
+               are you still waiting for?</p>
+        <a href="" class="btn-3">Join Now</a>
+    </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.0738568129314!2d73.84422261489287!3d18.52556428740607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c07e4111123b%3A0x3f92335c2e5c8400!2sP.E.S.%20Modern%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1678128250256!5m2!1sen!2sin" 
+        width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+       <div class="demo">
+        <img src="./img/logo.svg"  >
+        <h3>Quick Links</h3>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Event</a></li>
+                <li><a href="">Team</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="" class="btn">Register</a></li> 
+            </ul>
+        </nav>
+       </div>
     </div>
 </body>
