--- a/ABC/index.html
+++ b/ABC/index.html
@@ -18,7 +18,7 @@
         <div class="img_div"><img src="./img/logo.svg" /></div>
         <div class="nav_menu">
           <div>Home</div>
-          <div>Events</div>
+          <div><a href="events.html">Events</a></div>
           <div>Team</div>
           <div>Contact Us</div>
           <div class="btn">
