--- a/ABC/contact.html
+++ b/ABC/contact.html
@@ -64,14 +64,15 @@
                 <p class="name">gdscpesmcoe@gmail.com</p>
             </div>
         </div>
-        <div>
+        <div class="line_1"></div>
+        <div class="main">
             <div class="placeholder">
                 <input type="text" placeholder="Enter your name" value="">
             </div>
-            <div>
+            <div class="placeholder">
                 <input type="text" placeholder="Enter your email" value="">
             </div>
-            <div>
+            <div class="placeholder">
                 <textarea placeholder="Enter something...." value=""></textarea>
             </div>
         </div>
