contact info complete

--- a/ABC/contact.html
+++ b/ABC/contact.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
-    />
+      />
 
     <title>Document</title>
   </head>
@@ -20,105 +20,98 @@
           <div>Home</div>
           <div><a href="events.html">Events</a></div>
           <div>Team</div>
-          <div>Contact Us</div>
+          <div > <a href="contact.html">Conatct Us</a></div>
           <div class="btn">
             <a href="register.html">Register</a>
           </div>
         </div>
       </div>
-     <div class="contact">
-        <h4>Send us a message</h4>
-        <div class="span">
-        <div>
-            <span class="blue">Co</span>
+
+      <div class="contact">
+        <div class="contact_social">
+          <div>
+            <div><i class='bx bx-pin'></i></div>
+            <div class="contact_head">Address</div>
+            <div class="contact_info">PES MCOE 1186/A, Off J.M. Road, Shivajinagar, Pune, Maharashtra
+              Pin- 411005</div>
+          </div>
+          <div>
+            <div><i class='bx bxl-instagram'></i></div>
+            <div class="contact_head">Instagram</div>
+            <div class="contact_info">gdscpesmcoe </div>
+          </div>
+          <div>
+            <div><i class='bx bx-envelope'></i></div>
+            <div class="contact_head">Email</div>
+            <div class="contact_info">gdscpesmcoe@gmail.com </div>
+          </div>
         </div>
         <div>
-            <span class="green">nta</span>
-        </div>
-        <div>
-            <span  class="yellow">ct  </span>
-        </div>
-        <div>
-            <span  class="red">Us</span>
-            
-        </div>
-    </div>
-     </div>
-     <div class="last_contact">
-        <div>
-            <div >
-                <h4>Address</h4>
-                <p class="name">
-                    PES MCOE
-                    </p>
-                     <p class="name">1186/A, Off J.M. Road, <br>
-                     Shivajinagar, Pune,<br>
-                      Maharashtra Pin- 411005. </p>
+          <div>
+            <p>Send us a message</p>
+            <div class="contact_main">
+              <span class="blue">Co</span><span class="green">nta</span><span
+                class="yellow">ct</span>
+              <span class="red">Us</span>
+            </div>
+          </div>
+          <div class="contact_inputmain">
+            <div class="contact_input">
+              <input type="text" placeholder="Enter Your Name">
+
+            </div>
+            <div class="contact_input">
+              <input type="text" placeholder="Enter Your Email">
+
             </div>
             <div>
-                <h4>Instagram</h4>
-                <p class="name">gdscpesmcoe</p>
+              <textarea name="" id="" cols="30" rows="10" placeholder="Write something......"></textarea>
             </div>
-            <div>
-                <h4>Email</h4>
-                <p class="name">gdscpesmcoe@gmail.com</p>
-            </div>
+          </div>
+          <button class="contact_btn">Send Now</button>
         </div>
-        <div class="line_1"></div>
-        <div class="main">
-            <div class="placeholder">
-                <input type="text" placeholder="Enter your name" value="">
-            </div>
-            <div class="placeholder">
-                <input type="text" placeholder="Enter your email" value="">
-            </div>
-            <div class="placeholder">
-                <textarea placeholder="Enter something...." value=""></textarea>
-            </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="footer">
+        <div class="logo">
+          <img src="./img/logo.svg" alt="" />
         </div>
-     </div>
-     
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div class="footer">
-      <div class="logo">
-        <img src="./img/logo.svg" alt="" />
+        <div>
+          <p class="links">Quick Links</p>
+        </div>
+        <div class="footer_1">
+          <div>Home</div>
+          <div>Events</div>
+          <div>Team</div>
+          <div>Contact Us</div>
+          <div>Register</div>
+        </div>
+        <div>
+          <p class="h1">Social</p>
+        </div>
+        <div class="social_links">
+          <div><i class='bx bxl-instagram'></i></div>
+          <div><i class='bx bxl-linkedin'></i></div>
+          <div><i class='bx bxl-twitter'></i></div>
+        </div>
+        <div>
+          <p class="copyright">GDSC PES-MCOE</p>
+        </div>
       </div>
-      <div>
-        <p class="links">Quick Links</p>
-      </div>
-      <div class="footer_1">
-        <div>Home</div>
-        <div>Events</div>
-        <div>Team</div>
-        <div>Contact Us</div>
-        <div>Register</div>
-      </div>
-      <div>
-        <p class="h1">Social</p>
-      </div>
-      <div class="social_links">
-        <div><i class='bx bxl-instagram'></i></div>
-        <div><i class='bx bxl-linkedin'></i></div>
-        <div><i class='bx bxl-twitter' ></i></div>
-      </div>
-      <div>
-        <p class="copyright">GDSC PES-MCOE</p>
-      </div>
-    </div>
-  </body>
-</html>
+    </body>
+  </html>
