--- a/ABC/events.html
+++ b/ABC/events.html
@@ -17,10 +17,10 @@
       <div class="navbar">
         <div class="img_div"><img src="./img/logo.svg" /></div>
         <div class="nav_menu">
-          <div>Home</div>
-          <div>Events</div>
+          <div><a href="index.html">Home</a></div>
+          <div><a href="events.html">Events</a></div>
           <div>Team</div>
-          <div>Contact Us</div>
+          <div><a href="contact.html">Contact Us</a></div>
           <div class="btn">
             <a href="register.html">Register</a>
           </div>
